fix overflow issue

--- a/client/src/components/Header/style.module.scss
+++ b/client/src/components/Header/style.module.scss
@@ -72,6 +72,7 @@
 
 .downArrow {
   margin-left: 15px;
+  overflow: hidden;
 }
 
 .menu {
